# WishHelper

./: .gitattributes  .gitignore  CHANGELOG.md  README  README.md  Wish.sh  WishHelper.py  WishHelperGUI.glade  __init__.py  build.ps1  build.sh  edit_note.py  enumerate.py  install.ps1  install.sh  note.py  note_editor.py  pyproject.toml  run.ps1  run.sh  slags.py  type.py  wish.py  wish_editor.py  wisheditor.py
docs/: FOLLOWUPS.md
docs/superpowers/plans/: 2026-06-01-wishhelper-modernization.md
docs/superpowers/specs/: 2026-06-01-wishhelper-modernization-design.md
gui/: WishHelperEdit.glade  WishHelperEditor.glade  WishHelperMain.glade
tests/: conftest.py  test_app_id.py  test_formatting.py  test_i18n.py  test_legacy_import.py  test_main_window.py  test_models.py  test_pdf_export.py  test_resources.py  test_settings.py  test_storage.py  test_text_export.py  test_theme.py  test_wish_table_model.py
tests/fixtures/: legacy_notes.json  legacy_v1.json
tex_files/: tex_header
wishhelper/: __init__.py  __main__.py  errors.py  formatting.py  i18n.py  legacy_import.py  models.py  settings.py  storage.py
wishhelper/exporters/: __init__.py  pdf.py  text.py
wishhelper/resources/: __init__.py
wishhelper/ui/: __init__.py  action_delegate.py  main_window.py  resources.py  settings_dialog.py  theme.py  wish_editor.py  wish_table_model.py
